force-app/main/default/objects/Pago_parcial__c/Pago_parcial__c.object-meta.xml
<CustomObject>
    <label>Pago parcial</label>
    <nameField>
        <displayFormat>PAGO- {000}</displayFormat>
        <label>Folio de cobranza</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos parciales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>