force-app/main/default/objects/Pago_parcial__c/fields/Cancelado_por_endoso__c.field-meta.xml
<CustomField>
    <fullName>Cancelado_por_endoso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelado por endoso</label>
    <type>Checkbox</type>
</CustomField>