force-app/main/default/objects/Pago_parcial__c/fields/Clave__c.field-meta.xml
<CustomField>
    <fullName>Clave__c</fullName>
    <formula>pago_relacionado__r.Name &amp; &quot;-&quot; &amp; TEXT ( Numero_de_pago__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave</label>
    <type>Text</type>
</CustomField>