force-app/main/default/objects/Pago_parcial__c/fields/Endoso__c.field-meta.xml
<CustomField>
    <fullName>Endoso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endoso</label>
    <referenceTo>Endoso__c</referenceTo>
    <relationshipLabel>Pagos parciales</relationshipLabel>
    <relationshipName>Pagos_parciales</relationshipName>
    <type>Lookup</type>
</CustomField>