force-app/main/default/objects/Pago_parcial__c/fields/Fecha_de_pago_programada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_pago_programada__c</fullName>
    <label>Fecha de pago programada</label>
    <type>Date</type>
</CustomField>