force-app/main/default/objects/Pago_parcial__c/fields/Numero_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pago__c</fullName>
    <label>Número de pago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>