force-app/main/default/objects/Pago_parcial__c/fields/Pago_confirmado__c.field-meta.xml
<CustomField>
    <fullName>Pago_confirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago confirmado</label>
    <type>Checkbox</type>
</CustomField>