force-app/main/default/objects/Pago_parcial__c/fields/pago_relacionado__c.field-meta.xml
<CustomField>
    <fullName>pago_relacionado__c</fullName>
    <label>Pago relacionado</label>
    <referenceTo>Pago__c</referenceTo>
    <relationshipLabel>Pagos parciales</relationshipLabel>
    <relationshipName>Pagos_parciales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>