force-app/main/default/objects/Pago_parcial__c/fields/Referencia_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Referencia_de_pago__c</fullName>
    <label>Referencia de pago</label>
    <length>50</length>
    <type>Text</type>
</CustomField>