force-app/main/default/objects/Pago_parcial__c/fields/Registrado_por__c.field-meta.xml
<CustomField>
    <fullName>Registrado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrado por</label>
    <referenceTo>Vendedores__c</referenceTo>
    <relationshipLabel>Pagos parciales</relationshipLabel>
    <relationshipName>Pagos_parciales</relationshipName>
    <type>Lookup</type>
</CustomField>