force-app/main/default/objects/Pago_parcial__c/fields/Tipo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_pago__c</fullName>
    <label>Tipo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcial</fullName>
                <default>true</default>
                <label>Parcial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>